# pennylane-mcp

./: Dockerfile  __init__.py  client.py  pyproject.toml  railway.json  server.py
pennylane-mcp 2/: README.md  pyproject.toml
pennylane-mcp 2/pennylane_mcp/: client.py  server.py
