[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pennylane-mcp"
version = "1.0.0"
description = "MCP server for PennyLane accounting — Mecanicus Group"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
pennylane-mcp = "pennylane_mcp.server:run"

[tool.hatch.build.targets.wheel]
packages = ["pennylane_mcp"]
